--- a/index.html
+++ b/index.html
@@ -96,11 +96,12 @@
                     <li class="nav-item nav-dropdown">
                         <a href="#servicos" class="nav-link">Serviços <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#servicos">Psicoterapia Individual</a></li>
-                            <li><a href="#servicos">Terapia de Casal</a></li>
-                            <li><a href="#servicos">Atendimento Online</a></li>
-                            <li><a href="#servicos">Grupos e Rodas de Conversa</a></li>
-                            <li><a href="#servicos">Laudos Psicológicos</a></li>
+                            <li><a href="servicos/psicoterapia-individual.html">Psicoterapia Individual</a></li>
+                            <li><a href="servicos/terapia-de-casal.html">Terapia de Casal</a></li>
+                            <li><a href="servicos/terapia-online.html">Terapia Online</a></li>
+                            <li><a href="servicos/grupos-e-rodas.html">Grupos e Rodas de Conversa</a></li>
+                            <li><a href="servicos/laudos-psicologicos.html">Laudos Psicológicos</a></li>
+                            <li><a href="servicos/supervisao-profissional.html">Supervisão Profissional</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a href="#projetos" class="nav-link">Projetos</a></li>
@@ -207,7 +208,7 @@
         </section>
 
         <!-- Rodapé Sobre / Arranjos Psicologia -->
-        <section class="rodape-sobre section" style="background-color: var(--secondary-color); padding: 2rem 0;">
+        <section class="rodape-sobre section" id="rodape-sobre" style="background-color: var(--secondary-color); padding: 2rem 0;">
             <div class="container" style="text-align: center;">
                 <p style="font-style: italic; margin-bottom: 1.5rem; color: var(--text-color);"><em>Arranjos Psicologia — um espaço de formação, pesquisa e diálogo sobre a prática centrada na pessoa.</em></p>
                 <a href="https://arranjospsicologia.com.br" class="btn btn-outline" target="_blank" rel="noopener">Conheça também o projeto Arranjos Psicologia</a>
@@ -418,7 +419,7 @@
         </section>
 
         <!-- FAQ Section -->
-        <section class="faq section">
+        <section class="faq section" id="faq">
             <div class="container">
                 <div class="section-header">
                     <h2 class="section-title">Perguntas Frequentes</h2>
