Atualização de title e header para SEO

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Psicólogo em Vitória/ES com mais de 8 anos de experiência. Atendimento online para todo o Brasil e brasileiros no exterior, pela Abordagem Centrada na Pessoa (ACP).">
-    <meta name="keywords" content="psicólogo vitória es, psicólogo jardim da penha, terapeuta vitória, terapia ansiedade, terapia depressão, psicólogo online, abordagem centrada na pessoa">
+
+    <!-- SEO base -->
+    <title>Psicólogo em Vitória ES – Jardim da Penha | Bernardo Carielo</title>
+    <link rel="canonical" href="https://psicologobernardo.com.br/">
+    <meta name="description" content="Psicólogo em Vitória ES, no Jardim da Penha. Atendimento presencial e online pela Abordagem Centrada na Pessoa. 8+ anos de experiência. Agende sua consulta.">
+    <meta name="keywords" content="psicólogo em vitória, psicólogo em jardim da penha, psicoterapeuta vitória, terapia vitória, psicólogo humanista, abordagem centrada na pessoa, psicoterapia online, psicólogo jardim da penha vitória">
     <meta name="author" content="Bernardo Carielo">
 
     <!-- Google tag (gtag.js) -->
@@ -19,11 +23,19 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Psicólogo Bernardo - Bernardo Carielo CRP 16/5527">
-    <meta property="og:description" content="Psicoterapia com Abordagem Centrada na Pessoa em Vitória/ES - Atendimento individualizado">
-    <meta property="og:image" content="assets/images/og-image.jpg">
+    <meta property="og:locale" content="pt_BR">
+    <meta property="og:site_name" content="Psicólogo Bernardo">
+    <meta property="og:url" content="https://psicologobernardo.com.br/">
+    <meta property="og:title" content="Psicólogo em Vitória ES – Jardim da Penha | Bernardo Carielo">
+    <meta property="og:description" content="Atendimento psicológico presencial e online com base na Abordagem Centrada na Pessoa. Consultório em Jardim da Penha, Vitória/ES.">
+    <meta property="og:image" content="https://psicologobernardo.com.br/assets/images/og-image.jpg">
 
-    <title>Psicólogo em Vitória/ES – Bernardo Carielo (ACP)</title>
+    <!-- Twitter Cards (recomendado) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Psicólogo em Vitória ES – Jardim da Penha | Bernardo Carielo">
+    <meta name="twitter:description" content="Atendimento psicológico presencial e online com base na Abordagem Centrada na Pessoa. Consultório em Jardim da Penha, Vitória/ES.">
+    <meta name="twitter:image" content="https://psicologobernardo.com.br/assets/images/og-image.jpg">
+
 
     <!-- Schema Markup: Professional Service -->
     <script type="application/ld+json">
@@ -129,9 +141,10 @@
         <section class="hero section" id="home">
             <div class="hero-container container">
                 <div class="hero-content">
-                    <h1 class="hero-title">Cuidar de si também é um ato de coragem.</h1>
+                    <span class="hero-eyebrow">Autêntico é o melhor modo de viver —</span>
+                    <h1 class="hero-title">Psicólogo em Jardim da Penha, Vitória (ES) na Abordagem Centrada na Pessoa.</h1>
                     <p class="hero-description">Um espaço de escuta, acolhimento e autenticidade — para desacelerar, se compreender e reencontrar sentido.</p>
-                    <p class="hero-description">Atendimento presencial em Vitória/ES e online para todo o Brasil e brasileiros vivendo no exterior.</p>
+                    <p class="hero-description">Atendimento psicológico presencial em Vitória (ES) e online para todo o Brasil e brasileiros vivendo no exterior.</p>  
                     <div class="hero-buttons">
                         <a href="https://wa.me/5527998331228?text=Olá,%20gostaria%20de%20agendar%20uma%20consulta." class="btn btn-primary" target="_blank">
                             <i class="fab fa-whatsapp"></i> Agendar consulta
@@ -140,7 +153,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="assets/images/hero-image.jpg" alt="Bernardo Carielo, psicólogo clínico especializado em Abordagem Centrada na Pessoa em consultório em Vitória ES" loading="lazy">
+                    <img src="assets/images/hero-image.jpg" alt="Psicólogo em Jardim da Penha, Vitória (ES) – Bernardo Carielo, especialista em Abordagem Centrada na Pessoa" loading="lazy">
                 </div>
             </div>
         </section>
