correção do eyebrow

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <section class="hero section" id="home">
             <div class="hero-container container">
                 <div class="hero-content">
-                    <span class="hero-eyebrow">Autêntico é o melhor modo de viver —</span>
+                    <span class="hero-eyebrow">Autêntico é o melhor jeito de viver —</span>
                     <h1 class="hero-title">Psicólogo em Jardim da Penha, Vitória (ES) na Abordagem Centrada na Pessoa.</h1>
                     <p class="hero-description">Um espaço de escuta, acolhimento e autenticidade — para desacelerar, se compreender e reencontrar sentido.</p>
                     <p class="hero-description">Atendimento psicológico presencial em Vitória (ES) e online para todo o Brasil e brasileiros vivendo no exterior.</p>  
