adicionado breadcrumblist e article ao blog

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="index.html" class="nav-logo">
-                <img src="assets/images/logo.svg" alt="Logo Bernardo Carielo - Psicólogo CRP 16/5527" class="logo-img">
+                <img src="assets/images/logo.svg" alt="Logo empresarial Bernardo Carielo" class="logo-img">
             </a>
 
             <div class="nav-menu" id="nav-menu">
@@ -655,7 +655,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <img src="assets/images/logo.svg" alt="Logo Bernardo Carielo - Psicólogo CRP 16/5527" class="footer-logo">
+                    <img src="assets/images/logo.svg" alt="Logo empresarial Bernardo Carielo" class="footer-logo">
                     <p>Sou Bernardo Carielo, psicólogo CRP 16/5527. Ofereço psicoterapia com a Abordagem Centrada na Pessoa em Vitória/ES. Atendimento individual, casais e família.</p>
                 </div>
 
