Criação de páginas de navegação. Correção do menu e ajustes de layout para mobile. Inclusão de fotos placeholder para o site. Correção de efeitos nos botões de subdiretorios

--- a/servicos/psicoterapia-individual.html
+++ b/servicos/psicoterapia-individual.html
@@ -135,6 +135,14 @@
             <div class="container">
                 <h1 class="page-title">Psicoterapia Individual em Vitória – Espaço de escuta e autoconhecimento</h1>
                 <p class="page-subtitle">Um espaço acolhedor para compreender melhor suas emoções, relações e escolhas, no seu próprio ritmo</p>
+
+                <!-- Imagem Hero -->
+                <div style="text-align: center; margin-top: 2rem;">
+                    <img src="../assets/images/servicos/psicoterapia-individual-hero.jpg"
+                         alt="Atendimento de psicoterapia individual em consultório acolhedor - Vitória ES"
+                         style="max-width: 900px; width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-md);"
+                         loading="eager">
+                </div>
             </div>
         </section>
 
