--- a/servicos/supervisao-profissional.html
+++ b/servicos/supervisao-profissional.html
@@ -135,6 +135,14 @@
             <div class="container">
                 <h1 class="page-title">Supervisão Profissional em ACP</h1>
                 <p class="page-subtitle">Espaço de reflexão sobre a prática clínica, direcionado a psicólogos da Abordagem Centrada na Pessoa</p>
+
+                <!-- Imagem Hero -->
+                <div style="text-align: center; margin-top: 2rem;">
+                    <img src="../assets/images/servicos/supervisao-profissional-hero.jpg"
+                         alt="Supervisão clínica para psicólogos - Desenvolvimento profissional em ACP"
+                         style="max-width: 900px; width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-md);"
+                         loading="eager">
+                </div>
             </div>
         </section>
 
