--- a/servicos/terapia-de-casal.html
+++ b/servicos/terapia-de-casal.html
@@ -135,6 +135,14 @@
             <div class="container">
                 <h1 class="page-title">Terapia de Casal em Vitória – Espaço para escutar e ser escutado</h1>
                 <p class="page-subtitle">Um lugar para fortalecer o diálogo, lidar com conflitos e reconstruir o vínculo entre vocês</p>
+
+                <!-- Imagem Hero -->
+                <div style="text-align: center; margin-top: 2rem;">
+                    <img src="../assets/images/servicos/terapia-casal-hero.jpg"
+                         alt="Terapia de casal em ambiente acolhedor - Fortaleça seu relacionamento em Vitória ES"
+                         style="max-width: 900px; width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-md);"
+                         loading="eager">
+                </div>
             </div>
         </section>
 
