--- a/servicos/terapia-online.html
+++ b/servicos/terapia-online.html
@@ -135,6 +135,14 @@
             <div class="container">
                 <h1 class="page-title">Terapia Online em Vitória e em todo o Brasil</h1>
                 <p class="page-subtitle">O mesmo acolhimento e ética do atendimento presencial, com flexibilidade para se conectar de onde estiver</p>
+
+                <!-- Imagem Hero -->
+                <div style="text-align: center; margin-top: 2rem;">
+                    <img src="../assets/images/servicos/terapia-online-hero.jpg"
+                         alt="Terapia online - Psicoterapia por videochamada com segurança e sigilo"
+                         style="max-width: 900px; width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-md);"
+                         loading="eager">
+                </div>
             </div>
         </section>
 
