--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="nav-menu" id="nav-menu">
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#home" class="nav-link active">Início</a></li>
-                    <li class="nav-item"><a href="#sobre" class="nav-link">Sobre</a></li>
+                    <li class="nav-item"><a href="sobre.html" class="nav-link">Sobre</a></li>
                     <li class="nav-item nav-dropdown">
                         <a href="#servicos" class="nav-link">Serviços <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
@@ -133,7 +133,7 @@
                     </li>
                     <li class="nav-item"><a href="#projetos" class="nav-link">Projetos</a></li>
                     <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-                    <li class="nav-item"><a href="#contato" class="nav-link">Contato</a></li>
+                    <li class="nav-item"><a href="contato.html" class="nav-link">Contato</a></li>
                 </ul>
                 <div class="nav-close" id="nav-close">
                     <i class="fas fa-times"></i>
@@ -164,7 +164,7 @@
                         <a href="https://wa.me/5527998331228?text=Olá,%20gostaria%20de%20agendar%20uma%20consulta." class="btn btn-primary" target="_blank">
                             <i class="fab fa-whatsapp"></i> Agendar consulta
                         </a>
-                        <a href="#sobre" class="btn btn-secondary">Saiba mais</a>
+                        <a href="sobre.html" class="btn btn-secondary">Saiba mais</a>
                     </div>
                 </div>
                 <div class="hero-image">
@@ -663,11 +663,11 @@
                     <h3>Links Rápidos</h3>
                     <ul>
                         <li><a href="#home">Home</a></li>
-                        <li><a href="#sobre">Sobre</a></li>
+                        <li><a href="sobre.html">Sobre</a></li>
                         <li><a href="#servicos">Serviços</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="localizacao/psicologo-jardim-da-penha.html">Localização</a></li>
-                        <li><a href="#contato">Contato</a></li>
+                        <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </div>
 
