--- a/servicos/grupos-e-rodas.html
+++ b/servicos/grupos-e-rodas.html
@@ -135,6 +135,14 @@
             <div class="container">
                 <h1 class="page-title">Grupos e Rodas de Conversa</h1>
                 <p class="page-subtitle">Espaços coletivos de partilha, escuta e diálogo pela Abordagem Centrada na Pessoa</p>
+
+                <!-- Imagem Hero -->
+                <div style="text-align: center; margin-top: 2rem;">
+                    <img src="../assets/images/servicos/grupos-rodas-hero.jpg"
+                         alt="Grupos e rodas de conversa - Espaços coletivos de partilha e escuta"
+                         style="max-width: 900px; width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-md);"
+                         loading="eager">
+                </div>
             </div>
         </section>
 
