--- a/servicos/laudos-psicologicos.html
+++ b/servicos/laudos-psicologicos.html
@@ -135,6 +135,14 @@
             <div class="container">
                 <h1 class="page-title">Laudos Psicológicos e Avaliações</h1>
                 <p class="page-subtitle">Avaliação psicológica ética e cuidadosa para cirurgias e procedimentos específicos</p>
+
+                <!-- Imagem Hero -->
+                <div style="text-align: center; margin-top: 2rem;">
+                    <img src="../assets/images/servicos/laudos-psicologicos-hero.jpg"
+                         alt="Avaliação psicológica e laudos para cirurgias - Procedimento ético e cuidadoso"
+                         style="max-width: 900px; width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-md);"
+                         loading="eager">
+                </div>
             </div>
         </section>
 
