--- a/index.html
+++ b/index.html
@@ -1274,7 +1274,10 @@
     <!-- JavaScript (defer para não bloquear renderização) -->
     <script src="assets/js/main.min.js" defer></script>
 
-<!-- Google Analytics via Partytown (roda em Web Worker) -->
+<!-- Partytown Core (carregado antes dos scripts que o usam) -->
+<script src="/assets/partytown/partytown.js" type="module" defer></script>
+
+<!-- Google Analytics via Partytown (executado em Web Worker) -->
 <script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-WQ4XBV7333"></script>
 <script type="text/partytown">
   window.dataLayer = window.dataLayer || [];
@@ -1282,6 +1285,5 @@
   gtag('js', new Date());
   gtag('config', 'G-WQ4XBV7333', { 'anonymize_ip': true });
 </script>
-<script src="/assets/partytown/partytown.js"></script>
 </body>
 </html>
