aplicado async defer no partytown

--- a/index.html
+++ b/index.html
@@ -1275,7 +1275,7 @@
     <script src="assets/js/main.min.js" defer></script>
 
 <!-- Partytown Core (carregado antes dos scripts que o usam) -->
-<script src="/assets/partytown/partytown.js" type="module" defer></script>
+<script src="/assets/partytown/partytown.js" async defer></script>
 
 <!-- Google Analytics via Partytown (executado em Web Worker) -->
 <script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-WQ4XBV7333"></script>
