--- a/contato.html
+++ b/contato.html
@@ -149,28 +149,32 @@
     <!-- Header/Navigation -->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="index.html" class="nav-logo">
-                <img src="assets/images/logo.svg" alt="Logo empresarial Bernardo Carielo" class="logo-img">
+            <a href="/" class="nav-logo">
+                <img src="assets/images/logo.svg" alt="Logo Bernardo Carielo - Psicólogo CRP 16/5527" class="logo-img">
             </a>
 
             <div class="nav-menu" id="nav-menu">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="index.html#home" class="nav-link">Início</a></li>
-                    <li class="nav-item"><a href="sobre.html" class="nav-link">Sobre</a></li>
+                    <li class="nav-item"><a href="/#home" class="nav-link">Início</a></li>
+                    <li class="nav-item"><a href="/sobre.html" class="nav-link">Sobre</a></li>
                     <li class="nav-item nav-dropdown">
-                        <a href="index.html#servicos" class="nav-link">Serviços <svg width="12" height="12" viewBox="0 0 24 24" fill="currentColor" style="display:inline-block;vertical-align:middle;margin-left:0.25rem" aria-hidden="true"><path d="M7 10l5 5 5-5z"/></svg></a>
+                        <a href="/#servicos" class="nav-link">Serviços
+                            <svg width="12" height="12" viewBox="0 0 24 24" fill="currentColor" style="display:inline-block;vertical-align:middle;margin-left:0.25rem" aria-hidden="true">
+                                <path d="M7 10l5 5 5-5z"/>
+                            </svg>
+                        </a>
                         <ul class="dropdown-menu">
-                            <li><a href="servicos/psicoterapia-individual.html">Psicoterapia Individual</a></li>
-                            <li><a href="servicos/terapia-de-casal.html">Terapia de Casal</a></li>
-                            <li><a href="servicos/terapia-online.html">Terapia Online</a></li>
-                            <li><a href="servicos/grupos-e-rodas.html">Grupos e Rodas de Conversa</a></li>
-                            <li><a href="servicos/laudos-psicologicos.html">Laudos Psicológicos</a></li>
-                            <li><a href="servicos/supervisao-profissional.html">Supervisão Profissional</a></li>
+                            <li><a href="/servicos/psicoterapia-individual.html">Psicoterapia Individual</a></li>
+                            <li><a href="/servicos/terapia-de-casal.html">Terapia de Casal</a></li>
+                            <li><a href="/servicos/terapia-online.html">Terapia Online</a></li>
+                            <li><a href="/servicos/grupos-e-rodas.html">Grupos e Rodas de Conversa</a></li>
+                            <li><a href="/servicos/laudos-psicologicos.html">Laudos Psicológicos</a></li>
+                            <li><a href="/servicos/supervisao-profissional.html">Supervisão Profissional</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="index.html#projetos" class="nav-link">Projetos</a></li>
-                    <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-                    <li class="nav-item"><a href="contato.html" class="nav-link active">Contato</a></li>
+                    <li class="nav-item"><a href="/#projetos" class="nav-link">Projetos</a></li>
+                    <li class="nav-item"><a href="/blog.html" class="nav-link">Blog</a></li>
+                    <li class="nav-item"><a href="/contato.html" class="nav-link">Contato</a></li>
                 </ul>
                 <div class="nav-close" id="nav-close">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
@@ -202,7 +206,7 @@
                 <nav aria-label="Breadcrumb">
                     <ol itemscope itemtype="https://schema.org/BreadcrumbList">
                         <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-                            <a itemprop="item" href="index.html">
+                            <a itemprop="item" href="/">
                                 <span itemprop="name">Início</span>
                             </a>
                             <meta itemprop="position" content="1" />
@@ -384,11 +388,11 @@
                 <div class="footer-column">
                     <h3>Links Rápidos</h3>
                     <ul>
-                        <li><a href="index.html#home">Home</a></li>
-                        <li><a href="sobre.html">Sobre</a></li>
-                        <li><a href="index.html#servicos">Serviços</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contato.html">Contato</a></li>
+                        <li><a href="/#home">Home</a></li>
+                        <li><a href="/sobre.html">Sobre</a></li>
+                        <li><a href="/#servicos">Serviços</a></li>
+                        <li><a href="/blog.html">Blog</a></li>
+                        <li><a href="/contato.html">Contato</a></li>
                     </ul>
                 </div>
 
@@ -436,9 +440,9 @@
 
             <div class="footer-bottom">
                 <div class="footer-legal">
-                    <a href="politica-privacidade.html">Política de Privacidade</a>
+                    <a href="/politica-privacidade.html">Política de Privacidade</a>
                     <span class="separator"> | </span>
-                    <a href="termos-uso.html">Termos de Uso</a>
+                    <a href="/termos-uso.html">Termos de Uso</a>
                 </div>
                 <p>&copy; 2025 Psicólogo Bernardo - Bernardo Carielo (CRP 16/5527). Todos os direitos reservados.</p>
             </div>
