fix: use absolute paths for assets to fix CSS loading on subpages - Add relative: false to svelte.config.js paths - Rebuild site with absolute asset references

--- a/404.html
+++ b/404.html
@@ -4,12 +4,12 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BtdrHS6m.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BiENmxp0.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BqwYfzTf.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Bji3IGT1.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C01aNDpk.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Dp2qyR-0.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CFjS3YqN.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.C8x9nn0-.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/D9v6ouIy.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/TQ8ZMJ2V.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BYqJgZKS.js">
@@ -20,15 +20,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1tlck6o = {
+					__sveltekit_1r0b4fy = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BtdrHS6m.js"),
-						import("/_app/immutable/entry/app.CFjS3YqN.js")
+						import("/_app/immutable/entry/start.BqwYfzTf.js"),
+						import("/_app/immutable/entry/app.C8x9nn0-.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
