Deploy: atualização com otimizações de performance

--- a/404.html
+++ b/404.html
@@ -3,13 +3,20 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			rel="preload"
+			as="font"
+			type="font/woff2"
+			href="/fonts/inter-600-latin.woff2"
+			crossorigin
+		/>
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BqwYfzTf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Bji3IGT1.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Foc92hzo.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BuXPgV6x.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C01aNDpk.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Dp2qyR-0.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.C8x9nn0-.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DkLEdVWe.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/D9v6ouIy.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/TQ8ZMJ2V.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BYqJgZKS.js">
@@ -20,15 +27,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1r0b4fy = {
+					__sveltekit_78yevk = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BqwYfzTf.js"),
-						import("/_app/immutable/entry/app.C8x9nn0-.js")
+						import("/_app/immutable/entry/start.Foc92hzo.js"),
+						import("/_app/immutable/entry/app.DkLEdVWe.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
