--- a/404.html
+++ b/404.html
@@ -11,12 +11,12 @@
 			crossorigin
 		/>
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BY59CNe0.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DbWo8p_g.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Bf8PtIZQ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Rfn6j5VT.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DV4O6Min.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BPhF3bYJ.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.C50idNa2.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DRiNAwUQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DloiDCqF.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Bom-LBj3.js">
@@ -28,15 +28,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_dhpr12 = {
+					__sveltekit_ubfehn = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BY59CNe0.js"),
-						import("/_app/immutable/entry/app.C50idNa2.js")
+						import("/_app/immutable/entry/start.Bf8PtIZQ.js"),
+						import("/_app/immutable/entry/app.DRiNAwUQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
