eliminate header and footer css chunks

--- a/404.html
+++ b/404.html
@@ -11,12 +11,12 @@
 			crossorigin
 		/>
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.qh-L0dqw.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DmEONxMV.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CO8pujaL.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DgFPs9Jx.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DV4O6Min.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BPhF3bYJ.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CWVF1I87.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Vxh85MEU.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DloiDCqF.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Bom-LBj3.js">
@@ -28,15 +28,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_w7ja0s = {
+					__sveltekit_s20wz4 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.qh-L0dqw.js"),
-						import("/_app/immutable/entry/app.CWVF1I87.js")
+						import("/_app/immutable/entry/start.CO8pujaL.js"),
+						import("/_app/immutable/entry/app.Vxh85MEU.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
